src/components/chat/ChatFloatingModal.module.sass
@import 'src/styles/subsocial-vars.scss'

.ChatFloatingModal
  position: fixed
  bottom: 30px
  right: 30px
  z-index: 1000
  display: flex
  flex-direction: column
  align-items: flex-end
  gap: $space_normal

  .ChatFloatingButton
    width: 60px
    height: 60px
    border-radius: 50%
    color: white
    font-size: 24px
    display: flex
    justify-content: center
    align-items: center
    padding: 0

    img
      display: block
      width: 100%
      height: 100%

  .ChatFloatingIframe
    // 100px from the height of the button + offset to the bottom + gap
    height: min(570px, 90vh - 100px)
    // 60px from the offset left & right of the iframe (30px each)
    width: min(400px, 100vw - 60px)
    border-radius: $border_radius_large
    overflow: hidden
    box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25)
    transition: opacity 0.3s ease-out
    opacity: 1

    &.ChatFloatingIframeHidden
      pointer-events: none
      opacity: 0

    iframe
      border-radius: $border_radius_large
      width: 100%
      height: 100%
      border: none

